--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,18 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus earum vero architecto ab deserunt totam dignissimos et aut? Similique, optio!</p>
         </aside>
     </section>
+    <section class="bg-orange-300 pt-[4%] pb-[4%]">
+        <div class="flex justify-around w-[80%] m-auto items-center bg-orange-300">
 
+            <aside class="w-[30%]">
+                <h1 class="font-bold text-[50px]">Our wild Way</h1>
+                <p>Our philosophy is present in every stage of our production. We are endeavoring to contribute to
+                    the creation of a better world.</p>
+                    <button class="bg-black text-white px-9 rounded-[10px] mt-[5%]">DISCOVER MORE!</button>
+            </aside>
+            <img src="./Frame3.png" alt="" class="w-[40%]">
+        </div>
+    </section>
 
     </main>
 
